DBTOOLS-1700 messages refactoring

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -39,7 +39,7 @@ DatabaseType_unsupported_type = Unsupported database type:
 
 DbMenu_no_group = [no group]
 
-DbPropertyListEditor_already_present = Entry "{0}" is already present in the list!
+DbPropertyListEditor_already_present = Entry "%s" is already present in the list!
 
 DbPropertyListEditor_ch_link_hint = (for ClickHouse)
 
@@ -75,7 +75,7 @@ DbStoreEditorDialog_connection_type = Connection Type
 
 DbStoreEditorDialog_dump_browse = Browse...
 
-DbStoreEditorDialog_dump_custom_parameters = Loader custom parameters\n(available variables: {0} {1} {2} {3} {4}):
+DbStoreEditorDialog_dump_custom_parameters = Loader custom parameters\n(available variables: %s %s %s %s %s):
 
 DbStoreEditorDialog_dump_executable = Loader executable
 
@@ -137,7 +137,7 @@ DbStorePrefPage_action_copy = Copy DB connection
 
 DbStorePrefPage_action_edit = Edit DB connection
 
-DbStorePrefPage_already_present = Entry "{0}" is already present in the list!
+DbStorePrefPage_already_present = Entry "%s" is already present in the list!
 
 DbStorePrefPage_db = DB
 
@@ -161,9 +161,9 @@ DbStorePrefPage_saving_error = Error while saving connection list
 
 DbStorePrefPage_secure_storage_error = Secure storage error: 
 
-DbStorePrefPage_secure_storage_error_text_linux = Error while saving passwords in the secure storage: {0}.\n\nMake sure that default keychain exists in your system and is unlocked. If keychains are unavailable you may switch secure storage to use master-password. To do that disable Linux integration in the General -> Security -> Secure Storage preference page.\n\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
+DbStorePrefPage_secure_storage_error_text_linux = Error while saving passwords in the secure storage: %s.\n\nMake sure that default keychain exists in your system and is unlocked. If keychains are unavailable you may switch secure storage to use master-password. To do that disable Linux integration in the General -> Security -> Secure Storage preference page.\n\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
 
-DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords in the secure storage: {0}.\n\nSee General -> Security -> Secure Storage preference page for possible solutions.\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
+DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords in the secure storage: %s.\n\nSee General -> Security -> Secure Storage preference page for possible solutions.\nInstead of saving passwords in secure storage you may use the .pgpass file.\n\nDisable use of secure storage and store passwords in plain text?
 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
@@ -305,9 +305,9 @@ DiffTableViewer_save_to_DB = DB
 
 DiffTableViewer_save_to_project = project 
 
-DiffTableViewer_selected = Selected: {0}
+DiffTableViewer_selected = Selected: %s
 
-DiffTableViewer_selected_count = Selected {0} out of {1} objects for migration into {2}
+DiffTableViewer_selected_count = Selected %s out of %s objects for migration into %s
 
 DiffTableViewer_show_filters = Show filters...
 
@@ -333,13 +333,13 @@ DiffWizard_target = Target
 
 Duration_expected_format = Expected format: PnDTnHnMnS. See https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#toString--
 
-EclipseEnvironment_Error_SavePreferences = Could not save preferences file "{0}" .
+EclipseEnvironment_Error_SavePreferences = Could not save preferences file "%s" .
 
-EclipseIniWriter_change_manually = Changing the {0} parameter manually
+EclipseIniWriter_change_manually = Changing the %s parameter manually
 
 EclipseIniWriter_manual_editing_link = Information about .ini file is available at:
 
-EclipseIniWriter_replace_parameter_msg = Error while editing ini file: {2}\n\nTo change property manually you should replace "{0}..." with "{3}" parameter value in ini file and need fully restart Eclipse.\n\nini file location:\n{1}
+EclipseIniWriter_replace_parameter_msg = Error while editing ini file: %s\n\nTo change property manually you should replace "%s..." with "%s" parameter value in ini file and need fully restart Eclipse.\n\nini file location:\n%s
 
 EclipseIniWriter_updated = Updated 
 
@@ -429,13 +429,13 @@ HeapSizeCheckerDialog_set_heap_size = Set heap size
 
 HeapSizeChecker_do_not_ask_again = Do not ask again
 
-HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For large pgCodeKeeper projects (1000 objects or more) recommended heap size is {0} GB. \nWould you like to change it now?
+HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For large pgCodeKeeper projects (1000 objects or more) recommended heap size is %s GB. \nWould you like to change it now?
 
 HeapSizeChecker_heap_size_warning_title = Insufficient heap size
 
 IgnoreListEditorDialog_cancel = Cancel
 
-IgnoreListEditorDialog_error_file = Error while working with file: {0}.
+IgnoreListEditorDialog_error_file = Error while working with file: %s.
 
 IgnoreListEditorDialog_excluded_objects_list_editor = Ignored objects list editor
 
@@ -449,7 +449,7 @@ IgnoreListProperties_default_ignore_tooltip = Project's default ignore list in .
 
 IgnoreListProperties_edit_pgcodekeeperignore = Edit .pgcodekeeperignore
 
-IgnoredObjectPrefListEditor_already_present = Entry "{0}" is already present in the list with given parameters!
+IgnoredObjectPrefListEditor_already_present = Entry "%s" is already present in the list with given parameters!
 
 IgnoredObjectPrefListEditor_contents = Apply to contents
 
@@ -469,7 +469,7 @@ IgnoredObjectsPrefPage_convert_to_black_list = Black-list
 
 IgnoredObjectsPrefPage_convert_to_white_list = White-list
 
-IgnoredObjectsPrefPage_error_getting_ignores_list = Cannot load list of ignored objects from {0}
+IgnoredObjectsPrefPage_error_getting_ignores_list = Cannot load list of ignored objects from %s
 
 IgnoredObjectsPrefPage_error_saving_ignores_list = Cannot save ignored object list
 
@@ -519,7 +519,7 @@ MockDataPage_empty_table_name = Table name cannot be empty
 
 MockDataPage_explicit_type_cast = Explicit type cast
 
-MockDataPage_generation_failed = Could not generate value for column {0}. {1}
+MockDataPage_generation_failed = Could not generate value for column %s. %s
 
 MockDataPage_incorrect_row_count = Row count must be integer
 
@@ -605,13 +605,13 @@ NormalizeProject_project_normalized = Project normalized
 
 NormalizeProject_project_normalized_success = Project normalized successfully!
 
-Object_create_object = Create {0} object
+Object_create_object = Create %s object
 
 Object_wizard_title = New object
 
-OpenEditor_error_open_project_editor = Cannot open editor on project {0}
+OpenEditor_error_open_project_editor = Cannot open editor on project %s
 
-OpenProjectUtils_file = File {0}  is missing!
+OpenProjectUtils_file = File %s  is missing!
 
 OpenProjectUtils_high_proj_version = Project version is more recent than max supported: 
 
@@ -621,7 +621,7 @@ OpenProjectUtils_proj_version_unsupported = Project version error, operation abo
 
 OpenProjectUtils_proj_version_warn = Project version error, continuing may introduce unexpected changes:\n\n
 
-OpenProjectUtils_schema_convert_error = An error occurred when converting project schemas: {0}\n\nPlease try again, or convert project manually.\nThe required action is to move all SCHEMA/*.sql files into their respective directories.
+OpenProjectUtils_schema_convert_error = An error occurred when converting project schemas: %s\n\nPlease try again, or convert project manually.\nThe required action is to move all SCHEMA/*.sql files into their respective directories.
 
 OpenProjectUtils_unexpected_version_error = Unexpected error while reading project version! See Error Log.
 
@@ -629,7 +629,7 @@ OpenProjectUtils_unknown_proj_version = Unknown project version!
 
 OpenProjectUtils_update_format = Update project format?
 
-OpenProjectUtils_update_warning = Project ''{0}'' contains legacy schema files.\nIt is recommended to update the project by moving schema files into their respective directories.\n\nDo you want to perform this now?
+OpenProjectUtils_update_warning = Project ''%s'' contains legacy schema files.\nIt is recommended to update the project by moving schema files into their respective directories.\n\nDo you want to perform this now?
 
 OpenProjectUtils_updating_project = Updating project
 
@@ -705,7 +705,7 @@ ProjectEditorDiffer_apply_project = project
 
 ProjectEditorDiffer_apply_to = \ into 
 
-ProjectEditorDiffer_changed_direction_of_roll_on = You changed the migration direction. Now selected changes will apply to {0}.
+ProjectEditorDiffer_changed_direction_of_roll_on = You changed the migration direction. Now selected changes will apply to %s.
 
 ProjectEditorDiffer_changed_direction_of_roll_on_title = Changed the migration direction
 
@@ -753,7 +753,7 @@ ProjectEditorDiffer_script_creation_title = Save migration in project?
 
 ProjectEditorDiffer_work_with = Differences with 
 
-ProjectEditorInput_pgcodekeeper_project = {0} (pgCodeKeeper Project)
+ProjectEditorInput_pgcodekeeper_project = %s (pgCodeKeeper Project)
 
 ProjectEditorPrefPage_action_no_action = Nothing
 
@@ -813,15 +813,15 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
-ReferenceSearchResult_matches = ''{0}'' - {1} matches
+ReferenceSearchResult_matches = ''%s'' - %s matches
 
 RenameDefinitionChange_error_resource_already_exists = A file or folder with this name already exists
 
 RenameDefinitionProcessor_rename_object = Rename object
 
-SQLEditorCompletionProcessor_show_keywords = Press "{0}" to show Objects/Keywords
+SQLEditorCompletionProcessor_show_keywords = Press "%s" to show Objects/Keywords
 
-SQLEditorCompletionProcessor_show_templates = Press "{0}" to show SQL Templates
+SQLEditorCompletionProcessor_show_templates = Press "%s" to show SQL Templates
 
 SQLEditorContentOutlinePage_disabled_by_option = File is too large. See <a href="ru.taximaxim.codekeeper.ui.sqleditor">setting</a>.
 
@@ -845,7 +845,7 @@ SQLEditorFormatterPrefPage_tab = Tabs
 
 SQLEditorFormatterPrefPage_whitespace = Spaces
 
-SQLEditorInformationControl_multiple_quick_fix_available = {0} quick fixes available:
+SQLEditorInformationControl_multiple_quick_fix_available = %s quick fixes available:
 
 SQLEditorInformationControl_quick_fix_available = Quick fix available:
 
@@ -899,7 +899,7 @@ SqlEditor_absent_builder_message = Project builder extends SQL Editor capabiliti
 
 SqlEditor_absent_builder_title = Project builder is missing
 
-SqlEditor_script_delete_dialog_message = Delete migration script {0}?
+SqlEditor_script_delete_dialog_message = Delete migration script %s?
 
 SqlEditor_script_delete_dialog_title = Delete script?
 
@@ -909,15 +909,15 @@ SqlEditor_update_ddl = Executing
 
 SqlMergeViewer_compare_label = SQL Compare
 
-StdStreamRedirector_error_reading_std = Error while reading from stdout/stderr: {0}
+StdStreamRedirector_error_reading_std = Error while reading from stdout/stderr: %s
 
-StdStreamRedirector_error_reading_std_external = Exception thrown while reading external command output: {0}
+StdStreamRedirector_error_reading_std_external = Exception thrown while reading external command output: %s
 
-StdStreamRedirector_process_returned_with_error = Process returned with error: {0}. See Console and log for details.
+StdStreamRedirector_process_returned_with_error = Process returned with error: %s. See Console and log for details.
 
-StdStreamRedirector_wait_destroy_interrupted_unexpectedly = Wait for process destruction was interrupted: {0}
+StdStreamRedirector_wait_destroy_interrupted_unexpectedly = Wait for process destruction was interrupted: %s
 
-StdStreamRedirector_wait_thread_interrupted_unexpectedly = Interrupted wait on redirectorThread: {0} 
+StdStreamRedirector_wait_thread_interrupted_unexpectedly = Interrupted wait on redirectorThread: %s 
 
 StoragePrefListEditor_file_already_added = This file is already added to the list
 
@@ -925,7 +925,7 @@ StoragePrefListEditor_open_snapshot = Open objects snapshot
 
 TreeDiffer_loading_schema = Loading DB schema
 
-TreeDiffer_loading_schema_from = Loading DB schema from {0}
+TreeDiffer_loading_schema_from = Loading DB schema from %s
 
 TreeDiffer_schema_load_error = Error while loading DB schema
 
@@ -1127,7 +1127,7 @@ diffTableViewer_object_name = Object Name
 
 diffTableViewer_object_type = Object Type
 
-diffTableViewer_objects = Objects: {0}
+diffTableViewer_objects = Objects: %s
 
 diffTableViewer_open_diff_in_new_window = Show Diff
 
@@ -1194,7 +1194,7 @@ generalPrefPage_perspective_changing_status = Switch to pgCodeKeeper perspective
 
 generalPrefPage_show_console_when_program_write_to_console = Show console on new output
 
-getChangesCustomDialog_custom_prefs_description = Customize parameters of the current "{0}" operation.\nProgram and project settings will remain unaffected.
+getChangesCustomDialog_custom_prefs_description = Customize parameters of the current "%s" operation.\nProgram and project settings will remain unaffected.
 
 getChangesCustomDialog_run_with_specified_prefs = Run with specified parameters
 
@@ -1212,7 +1212,7 @@ initProjectFromSource_init_request_but_no_schema_source = Unknown schema source!
 
 initProjectFromSource_initializing_project = Initializing project...
 
-initProjectFromSource_ioexception_while_creating_project = IOException while creating project: {0}
+initProjectFromSource_ioexception_while_creating_project = IOException while creating project: %s
 
 manualDepciesDialog_add = Add \u2192
 
@@ -1228,7 +1228,7 @@ newProjWizard_error_in_initializing_repo_from_source = Error initializing projec
 
 newProjWizard_new_pg_db_project = New pgCodeKeeper project
 
-pgDumper_bad_pg_dump_version_output = Bad pg_dump --version output: {0}
+pgDumper_bad_pg_dump_version_output = Bad pg_dump --version output: %s
 
 pgpass_passwords_supported = .pgpass passwords are supported
 
@@ -1242,7 +1242,7 @@ prespective_change_status_never = Never change
 
 projectEditorDiffer_save_project = Updating project...
 
-projectProperties_error_occurs_while_saving_properties = Error occurs while saving properties: {0}
+projectProperties_error_occurs_while_saving_properties = Error occurs while saving properties: %s
 
 projectProperties_timezone_for_all_db_connections = Timezone for all DB connections:
 
@@ -1278,7 +1278,7 @@ sqlScriptDialog_script_select_storage = Target database is not selected.
 
 sqlScriptDialog_warning = Warning
 
-stdStreamRedirector_completed_with_code = {0} completed with return code {1}
+stdStreamRedirector_completed_with_code = %s completed with return code %s
 
 treeDiffer_building_diff_tree = Building diff tree...
 
