--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -811,7 +811,7 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
-ReferenceSearchResult_matches = ''%s'' - %s matches
+ReferenceSearchResult_matches = '%s' - %s matches
 
 RenameDefinitionChange_error_resource_already_exists = A file or folder with this name already exists
 
