--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -812,7 +812,7 @@ QuickUpdate_updating_db = \u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438
 
 QuickUpdate_updating_project = \u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
-ReferenceSearchResult_matches = ''%s'' - %s \u0441\u043E\u0432\u043F\u0430\u0434\u0435\u043D\u0438\u0439
+ReferenceSearchResult_matches = '%s' - %s \u0441\u043E\u0432\u043F\u0430\u0434\u0435\u043D\u0438\u0439
 
 RenameDefinitionChange_error_resource_already_exists = \u041F\u0430\u043F\u043A\u0430 \u0438\u043B\u0438 \u0444\u0430\u0439\u043B \u0441 \u0442\u0430\u043A\u0438\u043C \u0438\u043C\u0435\u043D\u0435\u043C \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
 
