DBTOOLS-1731 fixed setting name

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1077,7 +1077,7 @@ dbStoreEditorDialog_not_valid_port_number = Not valid port number:
 
 dbUpdatePrefPage_Enter_cmd_to_update_ddl_with_sql_script = Migration command\n(available variables: 
 
-dbUpdatePrefPage_check_function_bodies = Allow PostgreSQL to validate function bodies in DDL update script 
+dbUpdatePrefPage_check_function_bodies = Disable PostgreSQL function body checking in migration script
 
 dbUpdatePrefPage_create_script_project_directory = Create migration script files in project directory\n(enables more editor features: DB autoselection, autocomplete and others)
 
