DBTOOLS-1757 removed logic to write in ini file

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -335,16 +335,6 @@ Duration_expected_format = Expected format: PnDTnHnMnS. See https://docs.oracle.
 
 EclipseEnvironment_Error_SavePreferences = Could not save preferences file "%s" .
 
-EclipseIniWriter_change_manually = Changing the %s parameter manually
-
-EclipseIniWriter_manual_editing_link = Information about .ini file is available at:
-
-EclipseIniWriter_replace_parameter_msg = Error while editing ini file: %s\n\nTo change property manually you should replace "%s..." with "%s" parameter value in ini file and need fully restart Eclipse.\n\nini file location:\n%s
-
-EclipseIniWriter_updated = Updated 
-
-Eclipse_restart_offer = You need to fully restart Eclipse for changes to take effect.
-
 ErrorMessageDialog_dialog_title = Multiple problems have occurred
 
 FilterDialog_cancel = Cancel
@@ -421,15 +411,9 @@ GetSystemObjects_save_success_title = Snapshot created!
 
 GitUserReader_error_reading_local_changes = Error reading local changes
 
-HeapSizeCheckerDialog_manual_heap_editing_title = the heap size
-
-HeapSizeCheckerDialog_new_heap_size = New heap size
-
-HeapSizeCheckerDialog_set_heap_size = Set heap size
-
 HeapSizeChecker_do_not_ask_again = Do not ask again
 
-HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For large pgCodeKeeper projects (1000 objects or more) recommended heap size is %s GB. \nWould you like to change it now?
+HeapSizeChecker_heap_size_warning = Maximum Java heap size available to Eclipse is less than the recommended heap size. For working with large projects pgCodeKeeper (1000 objects or more) Recommended memory size is %s GB. \nTo change this parameter, you must manually edit the %s file in the directory where %s is installed, adding or changing the value of the -Xmx parameter.
 
 HeapSizeChecker_heap_size_warning_title = Insufficient heap size
 
